--- a/style.css
+++ b/style.css
@@ -3,3 +3,41 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+nav {
+  text-align: center;
+  margin-bottom: 20px;
+}
+nav a {
+  padding: 10px;
+  text-decoration: none;
+  background-color: brown;
+  color: white;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: brown;
+}
+#details a {
+  color: white;
+}
